2008-07-15	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-settings-helper/keyboard-shortcuts.c: Make it compile
	  here.
	* xfce4-settings-helper/xkb.c: Avoid vision by zerro.

2008-07-15	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-settings-helper/keyboard-shortcuts{c,h},
	  xfce4-settings-helper/Makefile.am,
	  xfce4-settings-helper/main.c: Add support for keyboard shortcuts.
	  Shortcuts are loaded, passive keyboard grabs are performed and
	  events with different modifier combinations are handled. The code
	  related to modifiers might not be sane, but it works quite well
	  here, even with changes made in .Xmodmap. I'd be curious to know
	  what happens if you change the keymap at runtime though.

2008-07-14	Nick Schermer <nick@xfce.org>

	* dialogs/display-settings/, dialogs/Makefile.am,
	  configure.ac.in: Initial import of the display
	  dialog code. Some basic stuff is working, but
	  not finished yet.
	* dialogs/mouse-settings/main.c: Set display name
	  as tooltip to make ellipsized string readable
	  with resizing the dialog.
	* TODO: Update.

2008-07-13	Nick Schermer <nick@xfce.org>

	* xfce4-settings-manager/Makefile.am,
	  dialogs/accessibility-settings/Makefile.am,
	  dialogs/mouse-settings/Makefile.am, dialogs/Makefile.am,
	  dialogs/appearance-settings/Makefile.am,
	  dialogs/keyboard-settings/Makefile.am,
	  xfce4-settings-helper/Makefile.am: Make all the make files look
	  the same. Add LDFLAGS and G_LOG_DOMAIN. Add PLATFORM_CPPFLAGS
	  for the CFLAGS used for debugging.
	* xfce4-settings-manager/main.c, dialogs/accessibility-settings/main.c,
	  dialogs/mouse-settings/main.c, dialogs/appearance-settings/main.c,
	  dialogs/keyboard-settings/main.c, xfce4-settings-helper/main.c:
	  Use the G_LOG_DOMAIN for the version info and init error.
	  Add the Xfce version to the version information.
	* Set svn:keywords Id on all the make files and configure.ac.in.

2008-07-13	Nick Schermer <nick@xfce.org>
