@@ -1,4 +1,8 @@
-2008-07-15	Jannis Pohlmann <jannis@xfce.org>
+2008-07-14	Nick Schermer <nick@xfce.org>
+
+	* configure.ac.in: Show if Xf86misc was found.
+
+2008-07-15	Nick Schermer <nick@xfce.org>
 
 	* xfce4-settings-helper/keyboard-shortcuts.c: Make it compile
 	  here.
